Admin Discord token client save

--- a/admin/src/components/Login/styles.scss
+++ b/admin/src/components/Login/styles.scss
@@ -15,4 +15,9 @@
   .login-submit {
     margin-top: 20px;
   }
+
+  .login-discord {
+    margin-top: 30px;
+    background-color: #5865f2;
+  }
 }
