--- a/admin/src/components/App/styles.scss
+++ b/admin/src/components/App/styles.scss
@@ -1,4 +1,16 @@
 .app {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
   background: #1b1b1b;
+}
+
+.app-content {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+
+  :not(:first-child) {
+    flex: 1;
+  }
 }
