--- a/admin/src/components/Login/styles.scss
+++ b/admin/src/components/Login/styles.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/vars';
+
 .login {
   display: flex;
   flex-direction: column;
@@ -18,6 +20,6 @@
 
   .login-discord {
     margin-top: 30px;
-    background-color: #5865f2;
+    background-color: $color-blurple;
   }
 }
