--- a/admin/src/components/LoginPage/styles.scss
+++ b/admin/src/components/LoginPage/styles.scss
@@ -1,7 +1,9 @@
+@import 'src/styles/vars';
+
 .login-page {
   display: flex;
   width: 100vw;
   height: 100vh;
   text-align: center;
-  background: #1b1b1b;
+  background: $color-dark;
 }
