--- a/admin/src/components/Navigation/styles.scss
+++ b/admin/src/components/Navigation/styles.scss
@@ -1,5 +1,14 @@
+@import 'src/styles/vars';
+
 .navigation {
   width: 200px;
-  background: #eeeeee;
   height: available;
+  background: $color-menu;
+  border-top: $color-dark 2px solid;
+}
+
+.navigation-list {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
 }
