Admin channels rescan (no-effect)

--- a/admin/src/components/App/styles.scss
+++ b/admin/src/components/App/styles.scss
@@ -19,3 +19,32 @@
     overflow: hidden;
   }
 }
+
+.app :global {
+  .MuiButton-containedPrimary {
+    background-color: $color-blurple;
+  }
+
+  .MuiSvgIcon-root {
+    color: $color-white;
+  }
+
+  .MuiCheckbox-colorPrimary {
+    .MuiSvgIcon-root {
+      color: rgba(255, 255, 255, 0.5);
+    }
+
+    &.Mui-checked .MuiSvgIcon-root {
+      color: $color-blue;
+    }
+
+    &.Mui-disabled .MuiSvgIcon-root {
+      opacity: 0.5;
+    }
+  }
+
+  .MuiBadge-badge {
+    background-color: $color-blurple;
+    color: $color-white;
+  }
+}
