--- a/admin/src/components/ServerPage/styles.scss
+++ b/admin/src/components/ServerPage/styles.scss
@@ -16,21 +16,15 @@
     height: $size;
     border-radius: 50%;
   }
-
-  &__member-count {
-    :global(.MuiBadge-badge) {
-      background-color: $color-blurple;
-      color: $color-white;
-    }
-  }
-
-  &__member-icon {
-    color: $color-white;
-  }
 }
 
 .server-page__info {
   display: flex;
   flex-wrap: wrap;
   column-gap: 40px;
+}
+
+.server-page__controls {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
