--- a/admin/src/components/ChannelList/styles.scss
+++ b/admin/src/components/ChannelList/styles.scss
@@ -20,3 +20,12 @@
     padding: 5px;
   }
 }
+
+.channel-list__table__raw {
+  &_category {
+    background-color: $color-menu;
+  }
+}
+
+.channel-list__table__id {
+}
