Admin main channel indicator

--- a/admin/src/components/App/styles.scss
+++ b/admin/src/components/App/styles.scss
@@ -47,4 +47,9 @@
     background-color: $color-blurple;
     color: $color-white;
   }
+
+  .MuiChip-filled {
+    color: $color-white;
+    background-color: $color-blurple;
+  }
 }
