Admin channel permissions view

--- a/admin/src/components/ChannelList/styles.scss
+++ b/admin/src/components/ChannelList/styles.scss
@@ -12,6 +12,10 @@
     justify-content: flex-start;
     align-items: center;
 
+    &__text {
+      font-weight: bold;
+    }
+
     &__chip {
       margin-left: 5px;
       margin-top: -10px;
