Admin. Users in DB count and empty component

--- a/admin/src/styles/vars.scss
+++ b/admin/src/styles/vars.scss
@@ -10,6 +10,8 @@ $color-black: #000000;
 $color-dark: #1b1b1b;
 $color-menu: #202225;
 $color-content: #36393f;
+$color-gray: #515960;
+$color-light-gray: #87909e;
 $color-text: #dcddde;
 
 $color-blue: #1976d2;
