--- a/admin/src/components/ServerPage/styles.scss
+++ b/admin/src/components/ServerPage/styles.scss
@@ -22,9 +22,9 @@
   display: flex;
   flex-wrap: wrap;
   column-gap: 40px;
+  margin-bottom: 20px;
 }
 
 .server-page__controls {
-  margin-top: 20px;
   margin-bottom: 20px;
 }
