Admin server modules display

--- a/admin/src/components/ServerPage/styles.scss
+++ b/admin/src/components/ServerPage/styles.scss
@@ -25,6 +25,10 @@
   margin-bottom: 20px;
 }
 
+.server-page__modules {
+  margin-bottom: 20px;
+}
+
 .server-page__controls {
   margin-bottom: 20px;
 }
