--- a/admin/src/components/ServerModuleList/styles.scss
+++ b/admin/src/components/ServerModuleList/styles.scss
@@ -10,8 +10,11 @@
   border-radius: 10px;
 }
 
+$module-size: 400px;
+$module-h-padding: 4px;
+
 .server-module-list__title {
-  width: fit-content;
+  width: $module-size + ($module-h-padding * 2);
   margin: 0.3em 0;
 }
 
@@ -19,8 +22,8 @@
   display: flex;
   align-items: center;
   column-gap: 16px;
-  width: 400px;
-  padding: 8px 4px;
+  width: $module-size;
+  padding: 8px $module-h-padding;
   background-color: $color-menu;
   border-radius: 10px;
 
