--- a/admin/src/components/ServerPage/styles.scss
+++ b/admin/src/components/ServerPage/styles.scss
@@ -25,7 +25,10 @@
   margin-bottom: 20px;
 }
 
-.server-page__modules {
+.server-page__additional {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 32px;
   margin-bottom: 20px;
 }
 
