Admin. Check admin privileges for guild

--- a/admin/src/components/ServerAdminList/styles.scss
+++ b/admin/src/components/ServerAdminList/styles.scss
@@ -42,3 +42,8 @@ $admin-h-padding: 4px;
     margin-left: auto;
   }
 }
+
+.server-admin-list__check {
+  margin-top: 4px;
+  margin-bottom: 10px;
+}
