--- a/admin/src/features/App/styles.scss
+++ b/admin/src/features/App/styles.scss
@@ -33,10 +33,6 @@
 
   :local(.app),
   .MuiModal-root {
-    .MuiButton-containedPrimary {
-      background-color: $color-blurple;
-    }
-
     .MuiSvgIcon-root {
       color: $color-white;
     }
@@ -47,7 +43,7 @@
       }
 
       &.Mui-checked .MuiSvgIcon-root {
-        color: $color-blue;
+        color: $color-blurple;
       }
 
       &.Mui-disabled .MuiSvgIcon-root {
@@ -60,18 +56,31 @@
       color: $color-white;
     }
 
-    .MuiChip-filled {
-      color: $color-white;
-      background-color: $color-blurple;
-    }
-
     .MuiPaper-root {
       background-color: $color-dark;
+    }
+
+    .MuiTableContainer-root {
+      background-image: none;
     }
 
     .MuiTableCell-root {
       color: $color-text;
       border-color: $color-content;
+    }
+
+    .MuiToggleButton-root {
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+
+      &.Mui-selected {
+        background-color: $color-blurple;
+        color: $color-white;
+
+        &:hover {
+          background-color: $color-blurple-selected;
+        }
+      }
     }
   }
 }
