--- a/admin/src/features/ModuleTable/styles.scss
+++ b/admin/src/features/ModuleTable/styles.scss
@@ -1,14 +1,27 @@
 @import '../../styles/vars';
 
 .module-table {
-  &__name {
-    width: 200px;
+  &__transport {
+    width: 64px;
 
     &__content {
       display: flex;
-      width: 200px;
-      align-items: center;
-      gap: 8px;
+      gap: 4px;
+    }
+  }
+
+  &__name {
+    width: 200px;
+  }
+
+  :global(.MuiTableCell-root) {
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  .module-table__raw {
+    :global(.MuiTableCell-root) {
+      padding: 8px;
     }
   }
 }
