--- a/admin/src/features/App/styles.scss
+++ b/admin/src/features/App/styles.scss
@@ -60,6 +60,11 @@
       background-color: $color-dark;
     }
 
+    // Navigation
+    & > .MuiDrawer-paper {
+      background: $color-menu;
+    }
+
     .MuiTableContainer-root {
       background-image: none;
     }
