--- a/admin/src/features/ServerList/styles.scss
+++ b/admin/src/features/ServerList/styles.scss
@@ -3,11 +3,10 @@
 .server-list {
 }
 
-.server-list__logo {
+.server-list__logo:global(.MuiAvatar-root) {
   $size: 48px;
   width: $size;
   height: $size;
-  border-radius: 50%;
 }
 
 .server-list__table__information {
