--- a/admin/src/pages/ServerPage/styles.scss
+++ b/admin/src/pages/ServerPage/styles.scss
@@ -10,11 +10,10 @@
   gap: 16px;
   margin-bottom: 32px;
 
-  img {
+  .server-page__icon:global(.MuiAvatar-root) {
     $size: 64px;
     width: $size;
     height: $size;
-    border-radius: 50%;
   }
 }
 
