--- a/admin/src/features/TelegramUserList/styles.scss
+++ b/admin/src/features/TelegramUserList/styles.scss
@@ -1,4 +1,9 @@
 @import '../../styles/vars';
 
 .telegram-user-list {
+  .telegram-user-list__photo {
+    $size: 40px;
+    width: $size;
+    height: $size;
+  }
 }
