--- a/admin/src/components/TextEditor/styles.scss
+++ b/admin/src/components/TextEditor/styles.scss
@@ -1,10 +1,24 @@
 @import '../../styles/vars';
 
 .editor {
+  padding: 10px;
+  border-radius: 5px;
+  background-color: $color-dark;
+
   &__area {
-    min-width: 300px;
-    min-height: 10em;
+    width: 100%;
+    max-width: 800px;
+    max-height: 500px;
+    padding: 0;
+    border: none;
     background-color: $color-dark;
     color: $color-text;
+    resize: none;
+    overflow-y: scroll !important;
+
+    &:active,
+    &:focus {
+      outline: none !important;
+    }
   }
 }
