--- a/admin/src/components/Code/styles.scss
+++ b/admin/src/components/Code/styles.scss
@@ -7,6 +7,12 @@
 
   pre {
     margin: 0;
+    overflow-wrap: break-word;
+  }
+
+  code {
+    white-space: pre-wrap;
+    word-break: break-all;
   }
 
   &__copy {
