--- a/admin/src/components/Code/styles.module.scss
+++ b/admin/src/components/Code/styles.module.scss
@@ -1,5 +1,3 @@
-@use '../../styles/vars';
-
 .code {
   margin: 10px 0;
   padding: 16px 8px;
@@ -30,7 +28,7 @@
       border-radius: 5px;
 
       &:hover {
-        background-color: vars.$color-gray;
+        background-color: $color-gray;
       }
     }
 
