--- a/admin/src/components/Empty/styles.module.scss
+++ b/admin/src/components/Empty/styles.module.scss
@@ -1,8 +1,6 @@
-@use '../../styles/vars';
-
 .empty {
   display: flex;
   justify-content: center;
   margin: 30px 0;
-  color: vars.$color-light-gray;
+  color: $color-light-gray;
 }
