--- a/admin/src/features/ServerModuleList/styles.module.scss
+++ b/admin/src/features/ServerModuleList/styles.module.scss
@@ -1,12 +1,10 @@
-@use '../../styles/vars';
-
 .server-module-list {
   display: flex;
   flex-direction: column;
   row-gap: 8px;
   width: fit-content;
   padding: 5px 10px;
-  background-color: vars.$color-dark;
+  background-color: $color-dark;
   border-radius: 10px;
 }
 
@@ -24,7 +22,7 @@ $module-h-padding: 4px;
   column-gap: 16px;
   width: $module-size;
   padding: 8px $module-h-padding;
-  background-color: vars.$color-menu;
+  background-color: $color-menu;
   border-radius: 10px;
 
   // MUI Avatar overload
