--- a/admin/src/pages/LoginPage/styles.module.scss
+++ b/admin/src/pages/LoginPage/styles.module.scss
@@ -1,9 +1,7 @@
-@use '../../styles/vars';
-
 .login-page {
   display: flex;
   width: 100vw;
   height: 100vh;
   text-align: center;
-  background: vars.$color-dark;
+  background: $color-dark;
 }
